--- a/nextjs-14/james-app/app/globals.css
+++ b/nextjs-14/james-app/app/globals.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.MuiDataGrid-cell {
+    border-right : solid 1px black;
+    border-bottom : solid 1px black;
+    /* front-size : 12px; */
+}
+
