--- a/nextjs-14/james-app/app/globals.css
+++ b/nextjs-14/james-app/app/globals.css
@@ -8,3 +8,16 @@
     /* front-size : 12px; */
 }
 
+/* external css to add in tailwind's Global css
+no-scrollbar(class) */
+@layer utilities {
+  @variants responsive {
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  }
+}
